docs-archive/apache-airflow-providers-amazon/9.37.0/_sources/_api/airflow/providers/amazon/aws/log/s3_task_handler/index.rst.txt
airflow.providers.amazon.aws.log.s3_task_handler
================================================

.. py:module:: airflow.providers.amazon.aws.log.s3_task_handler


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.log.s3_task_handler.S3RemoteLogIO
   airflow.providers.amazon.aws.log.s3_task_handler.S3TaskHandler


Module Contents
---------------

.. py:class:: S3RemoteLogIO(context=None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Convenience super-class to have a logger configured with the class name.


   .. py:attribute:: remote_base
      :type:  str


   .. py:attribute:: base_log_folder
      :type:  pathlib.Path


   .. py:attribute:: delete_local_copy
      :type:  bool


   .. py:attribute:: acl_policy
      :type:  str | None
      :value: None



   .. py:attribute:: processors
      :value: ()



   .. py:method:: from_config()
      :classmethod:


      Build the remote log IO from Airflow logging configuration.



   .. py:method:: upload(path, ti = None)

      Upload the given log path to the remote storage.



   .. py:property:: hook

      Returns S3Hook.



   .. py:method:: s3_log_exists(remote_log_location)

      Check if remote_log_location exists in remote storage.

      :param remote_log_location: log's location in remote storage
      :return: True if location exists else False



   .. py:method:: s3_read(remote_log_location, return_error = False)

      Return the log found at the remote_log_location or '' if no logs are found or there is an error.

      :param remote_log_location: the log's location in remote storage
      :param return_error: if True, returns a string error message if an
          error occurs. Otherwise returns '' when an error occurs.
      :return: the log found at the remote_log_location



   .. py:method:: write(log, remote_log_location, append = True, max_retry = 1)

      Write the log to the remote_log_location; return `True` or fails silently and return `False`.

      :param log: the contents to write to the remote_log_location
      :param remote_log_location: the log's location in remote storage
      :param append: if False, any existing log file is overwritten. If True,
          the new log is appended to any existing logs.
      :param max_retry: Maximum number of times to retry on upload failure
      :return: whether the log is successfully written to remote location or not.



   .. py:method:: read(relative_path, ti)


.. py:class:: S3TaskHandler(base_log_folder, s3_log_folder, max_bytes = 0, backup_count = 0, delay = False, **kwargs)

   Bases: :py:obj:`airflow.utils.log.file_task_handler.FileTaskHandler`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   S3TaskHandler is a python log handler that handles and reads task instance logs.

   It extends airflow FileTaskHandler and uploads to and reads from S3 remote storage.


   .. py:attribute:: handler
      :type:  logging.FileHandler | None
      :value: None



   .. py:attribute:: remote_base


   .. py:attribute:: log_relative_path
      :value: ''



   .. py:attribute:: closed
      :value: False



   .. py:attribute:: upload_on_close
      :value: True



   .. py:attribute:: io


   .. py:method:: set_context(ti, *, identifier = None)

      Provide task_instance context to airflow task handler.

      Generally speaking returns None.  But if attr `maintain_propagate` has
      been set to propagate, then returns sentinel MAINTAIN_PROPAGATE. This
      has the effect of overriding the default behavior to set `propagate`
      to False whenever set_context is called.  At time of writing, this
      functionality is only used in unit testing.

      :param ti: task instance object
      :param identifier: if set, adds suffix to log file. For use when relaying exceptional messages
          to task logs from a context other than task or trigger run



   .. py:method:: close()

      Close and upload local log file to remote storage S3.



